--- a/views/museums/edit.ejs
+++ b/views/museums/edit.ejs
@@ -1,33 +1,38 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Edit Museum</h1>
-    <form action="/museums/<%= museum._id%>?_method=PUT" method="post">
-        <section>
-            <label for="title">Name</label>
-            <input type="text" name="title" id="title" value="<%= museum.title%>">
-        </section>
-        <section>
-            <label for="title">Location</label>
-            <input type="text" name="location" id="location" value="<%= museum.location%>">
-        </section>
-        <section>
-            <label for="title">Description</label>
-            <textarea type="text" name="description" id="description">
-                <%= museum.description%>
-            </textarea>
-        </section>
-        <section>
-            <label for="title">price</label>
-            <input type="number" step=".01" name="price" id="price" value="<%= museum.price%>">
-        </section>
-        <button>Submit</button>
-    </form>
-    <a href="/museums/<%= museum._id %>">Cancel Edit - Back to Show Page</a>
-</body>
-</html>
+<% layout('layouts/boilerplate') -%>
+
+    <div class="col-6 offset-3">
+        <div class="card p-4">
+
+        <h1>Edit Museum</h1>
+    
+        <form action="/museums/<%= museum._id%>?_method=PUT" method="post">
+            <div class="mb-3">
+                <label for="name" class="form-label">Title</label>
+                <input type="text" class="form-control" id="title" name="title" value="<%= museum.title%>">
+            </div>
+            <div class="mb-3">
+                <label for="location" class="form-label">Location</label>
+                <input type="text" class="form-control" id="location" name="location" value="<%= museum.location%>">
+            </div>
+            <div class="mb-3">
+                <label for="image" class="form-label">Image Url</label>
+                <input type="text" class="form-control" id="image" name="image" value="<%= museum.image%>">
+            </div>
+            <div class="mb-3">
+                <label for="price" class="form-label">Campground Price</label>
+                <div class="input-group">
+                  <div class="input-group-text">$</div>
+                  <input type="number" class="form-control" step=".01" id="price" placeholder="0.00" name="price" value="<%= museum.price%>">
+                </div>
+            </div>
+            <div class="mb-3">
+                <label for="description" class="form-label">Description</label>
+                <textarea class="form-control" placeholder="" id="description" name="description"><%= museum.description%></textarea>
+            </div>
+            <div class="d-grid gap-2">
+                <button class="btn btn-primary" style="background-color: rgba(94, 150, 255, 1); border: none;" type="submit">Update</button>
+            </div>
+        </form>
+        <a href="/museums/<%= museum._id%>" style="color: rgba(94, 150, 255, 1)">Back to Museum</a>
+    </div>
+    </div>
