--- a/views/museums/show.ejs
+++ b/views/museums/show.ejs
@@ -1,29 +1,73 @@
 <% layout('layouts/boilerplate') -%>
 
-<div class="card">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-4">
-                <img src="<%= museum.image %>" class="img-fluid" alt="">
-            </div>
-            <div class="col-sm-8">
-                <div class="d-flex flex-column mb-3">
-                <div class="p-2">
-                    <h4 class="card-title" style="font-weight: bold; font-size: 30px;"><%= museum.title %></h4>
+    <div class="card">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-4">
+                    <img src="<%= museum.image %>" class="img-fluid" alt="">
                 </div>
-                <div class="p-2">
-                    <p class="card-text"><%= museum.description %></p>
-                    <p class="card-text"><i class="fa-solid fa-location-dot"></i> <%= museum.location %></p>
-                    <p class="card-text"><i class="fa-solid fa-tag"></i> $<%= museum.price %></p>
+                <div class="col-sm-8">
+                    <div class="d-flex flex-column mb-3">
+                        <div class="p-2">
+                            <h4 class="card-title" style="font-weight: bold; font-size: 30px;">
+                                <%= museum.title %>
+                            </h4>
+                        </div>
+                        <div class="p-2">
+                            <p class="card-text">
+                                <%= museum.description %>
+                            </p>
+                            <p class="card-text"><i class="fa-solid fa-location-dot"></i>
+                                <%= museum.location %>
+                            </p>
+                            <p class="card-text"><i class="fa-solid fa-tag"></i> $<%= museum.price %>
+                            </p>
+                        </div>
+                        <div class="p-2">
+                            <a class="card-link btn btn-info" href="/museums/<%=museum._id%>/edit">Edit Museum</a>
+                            <form class="d-inline" action="/museums/<%= museum._id%>?_method=DELETE" method="post">
+                                <button class="btn btn-danger">Delete Museum</button>
+                            </form>
+                        </div>
+                    </div>
                 </div>
-                <div class="p-2">
-                    <a class="card-link btn btn-info" href="/museums/<%=museum._id%>/edit">Edit Museum</a>
-                    <form class="d-inline" action="/museums/<%= museum._id%>?_method=DELETE" method="post">
-                        <button class="btn btn-danger">Delete Museum</button>
-                    </form>
-                </div>
-            </div>
             </div>
         </div>
     </div>
-</div>
+
+    <div class="card mt-3">
+        <div class="card-body">
+            <h2>Leave a Review</h2>
+            <form action="/museums/<%= museum._id%>/reviews" method="post" class="mb-3 validated-form" novalidate>
+                <div class="mb-3">
+                    <label class="form-label" for="rating">Rating</label>
+                    <input type="range" class="form-range" min="1" max="5" id="rating" name="review[rating]" required>
+                </div>
+                <div class="mb-3">
+                    <label class="form-label" for="body">Review</label>
+                    <textarea class="form-control" name="review[body]" id="body" cols="30" rows="3" required></textarea>
+                    <div class="valid-feedback">
+                        Looks good!
+                    </div>
+                </div>
+                <button class="btn btn-success">Submit</button>
+            </form>
+        </div>
+    </div>
+
+    <% for(let review of museum.reviews) { %>
+        <div class="card mt-3">
+            <div class="card-body">
+                <h5 class="card-title">
+                    Rating: <%= review.rating %>
+                </h5>
+                <p class="card-text">
+                    <%= review.body %>
+                </p>
+                <form class="d-inline" action="/museums/<%= museum._id%>/reviews/<%= review._id %>?_method=DELETE"
+                    method="post">
+                    <button class="btn btn-sm btn-danger">Delete</button>
+                </form>
+            </div>
+        </div>
+    <% } %>
