--- a/views/museums/show.ejs
+++ b/views/museums/show.ejs
@@ -20,40 +20,47 @@
                             <p class="card-text"><i class="fa-solid fa-location-dot"></i>
                                 <%= museum.location %>
                             </p>
+                            <li class="list-group-item">
+                                Submitted by <%= museum.author.username %>
+                            </li>
                             <p class="card-text"><i class="fa-solid fa-tag"></i> $<%= museum.price %>
                             </p>
                         </div>
-                        <div class="p-2">
-                            <a class="card-link btn btn-info" href="/museums/<%=museum._id%>/edit">Edit Museum</a>
-                            <form class="d-inline" action="/museums/<%= museum._id%>?_method=DELETE" method="post">
-                                <button class="btn btn-danger">Delete Museum</button>
-                            </form>
-                        </div>
+                        <% if(currentUser && museum.author.equals(currentUser._id)){ %>
+                            <div class="card-body">
+                                <a class="card-link btn btn-info" href="/museums/<%=museum._id%>/edit">Edit Museum</a>
+                                <form class="d-inline" action="/museums/<%= museum._id%>?_method=DELETE" method="post">
+                                    <button class="btn btn-danger">Delete Museum</button>
+                                </form>
+                            </div>
+                        <% } %>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
-    <div class="card mt-3">
-        <div class="card-body">
-            <h2>Leave a Review</h2>
-            <form action="/museums/<%= museum._id%>/reviews" method="post" class="mb-3 validated-form" novalidate>
-                <div class="mb-3">
-                    <label class="form-label" for="rating">Rating</label>
-                    <input type="range" class="form-range" min="1" max="5" id="rating" name="review[rating]" required>
-                </div>
-                <div class="mb-3">
-                    <label class="form-label" for="body">Review</label>
-                    <textarea class="form-control" name="review[body]" id="body" cols="30" rows="3" required></textarea>
-                    <div class="valid-feedback">
-                        Looks good!
+    
+    <% if(currentUser){ %>
+        <div class="card mt-3"> 
+            <div class="card-body">
+                <h2>Leave a Review</h2>
+                <form action="/museums/<%= museum._id%>/reviews" method="post" class="mb-3 validated-form" novalidate>
+                    <div class="mb-3">
+                        <label class="form-label" for="rating">Rating</label>
+                        <input type="range" class="form-range" min="1" max="5" id="rating" name="review[rating]" required>
                     </div>
-                </div>
-                <button class="btn btn-success">Submit</button>
-            </form>
+                    <div class="mb-3">
+                        <label class="form-label" for="body">Review</label>
+                        <textarea class="form-control" name="review[body]" id="body" cols="30" rows="3" required></textarea>
+                        <div class="valid-feedback">
+                            Looks good!
+                        </div>
+                    </div>
+                    <button class="btn btn-success">Submit</button>
+                </form>
+            </div>
         </div>
-    </div>
+    <% } %>
 
     <% for(let review of museum.reviews) { %>
         <div class="card mt-3">
@@ -61,13 +68,16 @@
                 <h5 class="card-title">
                     Rating: <%= review.rating %>
                 </h5>
+                <h6 class="card-subtitle mb-2 text-muted">By <%= review.author.username %></h6>
                 <p class="card-text">
                     <%= review.body %>
                 </p>
+                <% if(currentUser && review.author.equals(currentUser._id)){ %>
                 <form class="d-inline" action="/museums/<%= museum._id%>/reviews/<%= review._id %>?_method=DELETE"
                     method="post">
                     <button class="btn btn-sm btn-danger">Delete</button>
                 </form>
+                <% } %>
             </div>
         </div>
     <% } %>
